create layout for bestseller grid

--- a/index.html
+++ b/index.html
@@ -107,8 +107,31 @@
         </nav>
     </header>
     <main>
-        <section class="hero-text"></section>
-        <section class="book-grid"></section>
+        <section class="hero-text">
+            <h1>READING MAKES THE WORLD HUGE</h1>
+            <div class="hero-left-container">
+
+            </div>
+            <div class="hero-right-container">
+                <figure>
+                    <img src="/asset/images/bb713c5e26174bf2c5c2147b292c49a4 1.jpg" alt="red book with grey background">
+                </figure>
+            </div>
+        </section>
+        <section class="book-grid">
+            <h2>BESTSELLERS</h2>
+            <div class="book-grid-wrapper">
+                <div class="book-grid-block"></div>
+                <div class="book-grid-block"></div>
+                <div class="book-grid-block"></div>
+                <div class="book-grid-block"></div>
+                <div class="book-grid-block"></div>
+                <div class="book-grid-block"></div>
+                <div class="book-grid-block"></div>
+                <div class="book-grid-block"></div>
+                <div class="book-grid-block"></div>
+            </div>
+        </section>
         <section class="front-banner"></section>
         <section class="author-grid"></section>
         <section class="bottom-section"></section>
