--- a/index.html
+++ b/index.html
@@ -132,7 +132,9 @@
                 <div class="book-grid-block"></div>
             </div>
         </section>
-        <section class="front-banner"></section>
+        <section class="front-banner">
+
+        </section>
         <section class="author-grid"></section>
         <section class="bottom-section"></section>
     </main>
