reorganise the buttons styling to seperate css file

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="styles\styles.css">
+    <link rel="stylesheet" href="styles\buttons.css">
 </head>
 
 <body>
@@ -69,11 +70,11 @@
                 </svg>
             </div>
             <ul>
-                <li>Books</li>
-                <li>Authors</li>
-                <li>What to Read?</li>
-                <li>Gift Ideas</li>
-                <li>About Us</li>
+                <li> <a href="">Books</a></li>
+                <li> <a href="">Authors</a></li>
+                <li> <a href="">What to Read?</a></li>
+                <li><a href="">Gift Ideas</a></li>
+                <li><a href="">About Us</a></li>
             </ul>
             <div class="header-button">
 
@@ -101,7 +102,7 @@
 
 
                 </button>
-                <button class="txt-button">LOGIN</button>
+                <button class="txt-button-solid">LOGIN</button>
 
             </div>
 
@@ -111,6 +112,21 @@
         <section class="hero-text">
             <h1>READING MAKES THE WORLD HUGE</h1>
             <div class="hero-left-container">
+
+                <div>
+                    <h2>FIND SOMETHING TO READ</h2>
+                    <p>Fancy something unusual and unpredictable? Funny or exciting? No problem. Check out the
+                        collections
+                        we have prepared for you.</p>
+                    <button class="txt-button-trans">BROWSE NOW</button>
+                </div>
+                <svg width="259" height="299" viewBox="0 0 259 299" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <path
+                        d="M12.0027 305.5L97.7482 219.754M97.7482 219.754C75.3539 197.36 61.5027 166.423 61.5027 132.25C61.5027 63.9048 116.907 8.5 185.253 8.5C253.598 8.5 309.003 63.9048 309.003 132.25C309.003 200.595 253.598 256 185.253 256C151.08 256 120.143 242.149 97.7482 219.754Z"
+                        stroke="black" stroke-opacity="0.38" stroke-width="16" stroke-linecap="square"
+                        stroke-linejoin="round" />
+                </svg>
+
 
             </div>
             <div class="hero-right-container">
