update book grid card

--- a/index.html
+++ b/index.html
@@ -139,15 +139,161 @@
             <div class="book-grid-container">
                 <h2>BESTSELLERS</h2>
                 <div class="book-grid-wrapper">
-                    <div class="book-grid-block"></div>
-                    <div class="book-grid-block"></div>
-                    <div class="book-grid-block"></div>
-                    <div class="book-grid-block"></div>
-                    <div class="book-grid-block"></div>
-                    <div class="book-grid-block"></div>
-                    <div class="book-grid-block" id="yellow-bg"></div>
-                    <div class="book-grid-block"></div>
-                    <div class="book-grid-block"></div>
+                    <div class="book-grid-block">
+                        <figure class="book">
+                            <img class="object-contain" src="/asset/images/books/tellthewolvesimhome 1.png" alt="book cover picture">
+                        </figure>
+                        <div class="content-wrapper">
+                            <div class="title-box">
+                                <p></p>
+                                <h5></h5>
+                            </div>
+                            <div>
+                                <div class="comment-box"></div>
+                                <div class="rating-box"></div>
+                            </div>
+                            <div class="pricing-box">
+                                <p class="discount"></p>
+                                <p class="price-tag"></p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="book-grid-block">
+                        <figure class="book">
+                            <img class="object-contain" src="/asset/images/books/tellthewolvesimhome 1.png" alt="book cover picture">
+                        </figure>
+                        <div class="content-wrapper">
+                            <div class="title-box">
+                                <p></p>
+                                <h5></h5>
+                            </div>
+                            <div>
+                                <div class="comment-box"></div>
+                                <div class="rating-box"></div>
+                            </div>
+                            <div class="pricing-box">
+                                <p class="discount"></p>
+                                <p class="price-tag"></p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="book-grid-block">
+                        <figure class="book">
+                            <img class="object-contain" src="/asset/images/books/tellthewolvesimhome 1.png" alt="book cover picture">
+                        </figure>
+                        <div class="content-wrapper">
+                            <div class="title-box">
+                                <p></p>
+                                <h5></h5>
+                            </div>
+                            <div>
+                                <div class="comment-box"></div>
+                                <div class="rating-box"></div>
+                            </div>
+                            <div class="pricing-box">
+                                <p class="discount"></p>
+                                <p class="price-tag"></p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="book-grid-block">
+                        <figure class="book">
+                            <img class="object-contain" src="/asset/images/books/tellthewolvesimhome 1.png" alt="book cover picture">
+                        </figure>
+                        <div class="content-wrapper">
+                            <div class="title-box">
+                                <p></p>
+                                <h5></h5>
+                            </div>
+                            <div>
+                                <div class="comment-box"></div>
+                                <div class="rating-box"></div>
+                            </div>
+                            <div class="pricing-box">
+                                <p class="discount"></p>
+                                <p class="price-tag"></p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="book-grid-block">
+                        <figure class="book">
+                            <img class="object-contain" src="/asset/images/books/tellthewolvesimhome 1.png" alt="book cover picture">
+                        </figure>
+                        <div class="content-wrapper">
+                            <div class="title-box">
+                                <p></p>
+                                <h5></h5>
+                            </div>
+                            <div>
+                                <div class="comment-box"></div>
+                                <div class="rating-box"></div>
+                            </div>
+                            <div class="pricing-box">
+                                <p class="discount"></p>
+                                <p class="price-tag"></p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="book-grid-block">
+                        <figure class="book">
+                            <img class="object-contain" src="/asset/images/books/tellthewolvesimhome 1.png" alt="book cover picture">
+                        </figure>
+                        <div class="content-wrapper">
+                            <div class="title-box">
+                                <p></p>
+                                <h5></h5>
+                            </div>
+                            <div>
+                                <div class="comment-box"></div>
+                                <div class="rating-box"></div>
+                            </div>
+                            <div class="pricing-box">
+                                <p class="discount"></p>
+                                <p class="price-tag"></p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="book-grid-block yellow-bg" >
+                        
+                    </div>
+                    <div class="book-grid-block">
+                        <figure class="book">
+                            <img class="object-contain" src="/asset/images/books/tellthewolvesimhome 1.png" alt="book cover picture">
+                        </figure>
+                        <div class="content-wrapper">
+                            <div class="title-box">
+                                <p></p>
+                                <h5></h5>
+                            </div>
+                            <div>
+                                <div class="comment-box"></div>
+                                <div class="rating-box"></div>
+                            </div>
+                            <div class="pricing-box">
+                                <p class="discount"></p>
+                                <p class="price-tag"></p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="book-grid-block">
+                        <figure class="book">
+                            <img class="object-contain" src="/asset/images/books/tellthewolvesimhome 1.png" alt="book cover picture">
+                        </figure>
+                        <div class="content-wrapper">
+                            <div class="title-box">
+                                <p></p>
+                                <h5></h5>
+                            </div>
+                            <div>
+                                <div class="comment-box"></div>
+                                <div class="rating-box"></div>
+                            </div>
+                            <div class="pricing-box">
+                                <p class="discount"></p>
+                                <p class="price-tag"></p>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </section>
