update book grid design addition of price tag and rating and comment bar

--- a/index.html
+++ b/index.html
@@ -145,16 +145,16 @@
                         </figure>
                         <div class="content-wrapper">
                             <div class="title-box">
-                                <p></p>
-                                <h5></h5>
+                                <p>Murakami</p>
+                                <h5>After Dark</h5>
                             </div>
                             <div>
                                 <div class="comment-box"></div>
                                 <div class="rating-box"></div>
                             </div>
                             <div class="pricing-box">
-                                <p class="discount"></p>
-                                <p class="price-tag"></p>
+                                <p class="discount"> $15.50</p>
+                                <h6 class="price-tag">$10.50</h6>
                             </div>
                         </div>
                     </div>
@@ -164,16 +164,16 @@
                         </figure>
                         <div class="content-wrapper">
                             <div class="title-box">
-                                <p></p>
-                                <h5></h5>
+                                <p>Murakami</p>
+                                <h5>After Dark</h5>
                             </div>
                             <div>
                                 <div class="comment-box"></div>
                                 <div class="rating-box"></div>
                             </div>
                             <div class="pricing-box">
-                                <p class="discount"></p>
-                                <p class="price-tag"></p>
+                                <p class="discount"> $15.50</p>
+                                <h6 class="price-tag">$10.50</h6>
                             </div>
                         </div>
                     </div>
@@ -183,16 +183,16 @@
                         </figure>
                         <div class="content-wrapper">
                             <div class="title-box">
-                                <p></p>
-                                <h5></h5>
+                                <p>Murakami</p>
+                                <h5>After Dark</h5>
                             </div>
                             <div>
                                 <div class="comment-box"></div>
                                 <div class="rating-box"></div>
                             </div>
                             <div class="pricing-box">
-                                <p class="discount"></p>
-                                <p class="price-tag"></p>
+                                <p class="discount"> $15.50</p>
+                                <h6 class="price-tag">$10.50</h6>
                             </div>
                         </div>
                     </div>
@@ -202,16 +202,16 @@
                         </figure>
                         <div class="content-wrapper">
                             <div class="title-box">
-                                <p></p>
-                                <h5></h5>
+                                <p>Murakami</p>
+                                <h5>After Dark</h5>
                             </div>
                             <div>
                                 <div class="comment-box"></div>
                                 <div class="rating-box"></div>
                             </div>
                             <div class="pricing-box">
-                                <p class="discount"></p>
-                                <p class="price-tag"></p>
+                                <p class="discount"> $15.50</p>
+                                <h6 class="price-tag">$10.50</h6>
                             </div>
                         </div>
                     </div>
@@ -221,16 +221,16 @@
                         </figure>
                         <div class="content-wrapper">
                             <div class="title-box">
-                                <p></p>
-                                <h5></h5>
+                                <p>Murakami</p>
+                                <h5>After Dark</h5>
                             </div>
                             <div>
                                 <div class="comment-box"></div>
                                 <div class="rating-box"></div>
                             </div>
                             <div class="pricing-box">
-                                <p class="discount"></p>
-                                <p class="price-tag"></p>
+                                <p class="discount"> $15.50</p>
+                                <h6 class="price-tag">$10.50</h6>
                             </div>
                         </div>
                     </div>
@@ -240,16 +240,16 @@
                         </figure>
                         <div class="content-wrapper">
                             <div class="title-box">
-                                <p></p>
-                                <h5></h5>
+                                <p>Murakami</p>
+                                <h5>After Dark</h5>
                             </div>
                             <div>
                                 <div class="comment-box"></div>
                                 <div class="rating-box"></div>
                             </div>
                             <div class="pricing-box">
-                                <p class="discount"></p>
-                                <p class="price-tag"></p>
+                                <p class="discount"> $15.50</p>
+                                <h6 class="price-tag">$10.50</h6>
                             </div>
                         </div>
                     </div>
@@ -262,16 +262,16 @@
                         </figure>
                         <div class="content-wrapper">
                             <div class="title-box">
-                                <p></p>
-                                <h5></h5>
+                                <p>Murakami</p>
+                                <h5>After Dark</h5>
                             </div>
                             <div>
                                 <div class="comment-box"></div>
                                 <div class="rating-box"></div>
                             </div>
                             <div class="pricing-box">
-                                <p class="discount"></p>
-                                <p class="price-tag"></p>
+                                <p class="discount"> $15.50</p>
+                                <h6 class="price-tag">$10.50</h6>
                             </div>
                         </div>
                     </div>
@@ -281,16 +281,16 @@
                         </figure>
                         <div class="content-wrapper">
                             <div class="title-box">
-                                <p></p>
-                                <h5></h5>
+                                <p>Murakami</p>
+                                <h5>After Dark</h5>
                             </div>
                             <div>
                                 <div class="comment-box"></div>
                                 <div class="rating-box"></div>
                             </div>
                             <div class="pricing-box">
-                                <p class="discount"></p>
-                                <p class="price-tag"></p>
+                                <p class="discount"> $15.50</p>
+                                <h6 class="price-tag">$10.50</h6>
                             </div>
                         </div>
                     </div>
